# rustman

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
payload/: cmdi.json  open_redirect.json  path_traversal.json  rce.json  sqli.json  ssrf.json  ssti.json  xss.json  xxe.json
src/: app.rs  ca.rs  claude_client.rs  cli.rs  crawler.rs  gui.rs  main.rs  mcp.rs  openapi.rs  proxy.rs  rapport.rs  tui.rs
vuln-api/: README.md  go.mod  main.go  openapi.yaml  openapi.yml
