[package]
name = "rustman"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustman"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
httparse     = "1"
eframe       = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui         = "0.29"
rcgen        = "0.12"
time         = "0.3"
rustls       = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rmcp         = { version = "1.7.0", features = ["server", "macros", "schemars", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
axum         = { version = "0.8", features = ["http1", "tokio"] }
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde        = { version = "1",     features = ["derive"] }
serde_json   = "1"
